<resources>
    <string name="app_name">LiveMyLife</string>
    <string name="title_activity_maps">Map</string>

    <!--<string name="google_maps_key">AIzaSyCPcmmWh8OTpkzykHX_wQjmtYp7C_7Erxw</string>-->
    <string name="google_maps_key">AIzaSyA56y_BwrlpqyKdRBafyVqo6LgxsC7dGTY</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_passwordConfirm">Confirm password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_new_story">New story</string>
    <string name="title_browse_story">Browse story</string>
    <string name="title_my_account">My account</string>
    <string name="title_activity_local_activities">localActivities</string>
    <string name="title_home">My Stories</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_pseudo">Pseudo</string>
    <string name="prompt_firstname">Firstname</string>
    <string name="prompt_lastname">Lastname</string>
    <string name="action_register">Register</string>
    <string name="prompt_description">Enter your bio !</string>
    <string name="title_my_profile">My profile</string>
    <string name="change_password">Change my password</string>
    <string name="prompt_my_pseudo">My pseudo :</string>
    <string name="prompt_my_name">My name :</string>

    <!-- Strings related to maps -->
    <string name="maps_test_button">Test Button</string>
    <string name="maps_test_edit">Test Button</string>
    <string name="maps_test_integer">Test Button</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_new_password_confirm">Confirm new password</string>
    <string name="prompt_old_password">Current password</string>

    <!-- Strings related to uploads -->
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="prompt_use_picture">Browse to choose a picture</string>
    <string name="title_edit_your_step">Edit your step</string>
    <string name="prompt_description_step">Enter a description for the current step</string>
    <string name="title_your_story">Your story</string>
    <string name="title_no_step">No step created yet. Start playing !</string>
    <string name="prompt_new_title">Title of the story</string>
    <string name="prompt_story_description">Enter a description for the current story</string>
    <string name="prompt_description_short">Enter a description</string>
    <string name="error_fill_field">Please fill every field, and take a picture !</string>
    <string name="error_any_modifications">No fields have been modified, please click on back instead.</string>
    <string name="error_passwords_and_confirm">Passwords are not the same !</string>
    <string name="title_edit_and_other_name">Edit</string>
    <string name="error_empty_field">No field can be empty</string>
    <string name="error_oldPassword_equal_newPassword">The old password must be different from the new one !</string>
    <string name="error_password_and_confirmation_different">The new password and the confirmation password must be the same !</string>
    <string name="title">Title</string>
    <string name="estimated_time">Estimated time :</string>
    <string name="by">By : </string>
    <string name="story_like">You enjoyed this story ? Like it !</string>
    <string name="description">Description :</string>
    <string name="error_title_too_long">Title too long, please make it shorter ! (maximum 20 characters) </string>
    <string name="title_delete">Delete</string>
    <string name="confirmation_delete_story">Are you sure you want to delete this story?</string>
    <string name="confirmation_delete_step">Are you sure you want to delete this step?</string>
    <string name="choice_yes">Yes</string>
    <string name="choice_no">No</string>
    <string name="title_publish">Publish</string>
    <string name="confirmation_publish">Are you sure you want to publish this story?</string>
    <string name="title_resume_story">Resume story ?</string>
    <string name="alert_resume_story">Do you want to resume your story where you left it ?</string>
    <string name="step">Step</string>
    <string name="story_finished">You finished the story</string>
    <string name="map_off">Map off</string>
    <string name="map_on">Map on</string>
    <string name="you_finished_this_story">You finished this story !</string>
    <string name="search_here">Search Here</string>
    <string name="error_no_stories">No stories created yet. Start sharing !</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="alert_confirm">Confirm</string>
    <string name="alert_message_permission_confirm">You revoked some permissions, are you really sure ? This will deactive some features !</string>
    <string name="toast_remember_permission">Be careful, you have choosen to not authorize some functionalities and to remember your choices.</string>
    <string name="alert_choice_ok">Ok</string>
    <string name="alert_permissions_retry">Retry permissions.</string>
    <string name="alert_permissions_create_step">You cannot create a step because you denied some permissions !</string>
    <string name="permissions_remember_edit_your_step">You can\'t create a step because you choosed to refuse the access to your camera or to your files and it is mandatory to continue. Please change your settings application.</string>
    <string name="permissions_remember_edit_story">You can\'t create your story because you choosed to refuse the access to your camera or to your files and it is mandatory to continue. Please change your settings application.</string>
    <string name="permissions_edit_story_cant_create">You can\'t create your story because access to your files and to your camera is mandatory !</string>
    <string name="not_yet_registered_button">Not yet registered ? Click here to sign up !</string>
    <string name="about">About</string>
    <string name="congratulations_your_story_is_now_online">Congratulations ! Your story is now online !</string>
    <string name="feel_free_to_share_it_with_your_friends">Feel free to share it with your friends !</string>
</resources>
